# triqs-realevol

./: .clang-tidy  CMakeLists.txt  Dockerfile  LICENSE.txt  README.md  TODO  TODO.md
.github/ISSUE_TEMPLATE/: bug.md
.github/workflows/: build-and-test.yml  build.yml  conda-publish.yml
benchmark/: CMakeLists.txt
benchmark/boson/: boson.py
benchmark/cluster/: cluster.py
benchmark/lapack_vs_lanczos/: lapack_vs_lanczos.py
benchmark/ls_hs/: CMakeLists.txt  ls_hs.cpp  moments.hpp
benchmark/time_expr/: CMakeLists.txt  time_expr_benchmark.cpp  time_expr_benchmark.out
c++/: CMakeLists.txt  any_mesh.hpp  c_time_expr.hpp  callable_complex.hpp  common.hpp  complex_aux.hpp  compute_2t_obs_parameters.hpp  compute_gf_parameters.hpp  fifo_mesh_container.hpp  fundamental_operator_set.hpp  global_index.hpp  hs_structure.hpp  imperative_operator.hpp  init_state.cpp  init_state.hpp  interpolator.hpp  lanczos.hpp  lanczos_worker.hpp  lpt_scheduler.hpp  make_init_state.cpp  many_body_operator.hpp  mesh_base.hpp  mesh_container.hpp  mesh_container_cyclic.hpp  mesh_iterator.hpp  mesh_utils.hpp  mpi_dispatcher.hpp  numerics.hpp  observables_worker.hpp  propagator.cpp  propagator.hpp  realevol.cpp  realevol.hpp  runge_kutta.hpp  schroedinger_worker.hpp  signal_handler.cpp  signal_handler.hpp  simulation.hpp  solve_parameters.hpp  solver.cpp  (+21 more)
c++/exprtk/: CMakeLists.txt  exprtk.hpp
c++/realevol/: CMakeLists.txt  array_utility.hpp  common.hpp  compute.cpp  compute.hpp  compute_2t_obs_parameters.hpp  dynamical_trace.cpp  dynamical_trace.hpp  global_index.hpp  hs_structure.hpp  init_state.cpp  init_state.hpp  interpolator.hpp  lanczos_worker.hpp  make_init_state.cpp  make_static_op.hpp  mesh_container.hpp  mesh_utils.hpp  mpi_dispatcher.hpp  propagator.cpp  propagator.hpp  solver.cpp  solver.hpp  solver_parameters.hpp  sort2.hpp  time_expr.cpp  time_expr.hpp  time_interp.cpp  time_interp.hpp  time_point_selector.hpp  types.hpp  utility.cpp  utility.hpp  wl_worker.cpp  wl_worker.hpp  worldlines.cpp  worldlines.hpp
c++/realevol/compute/: impl.hxx  time_expr.cpp  time_interp.cpp
c++/realevol/hilbert_space/: fundamental_operator_set.cpp  fundamental_operator_set.hpp  hilbert_space.hpp  imperative_operator.hpp  space_partition.hpp  state.hpp  state_view.hpp
c++/realevol/operators/: many_body_operator.cpp  many_body_operator.hpp
c++/triqs/: tridiag_worker.hpp
c++/triqs/draft/hilbert_space_tools/: fundamental_operator_set.hpp  hilbert_space.hpp  imperative_operator.hpp  state.hpp
c++/triqs/hilbert_space/: fundamental_operator_set.cpp  fundamental_operator_set.hpp  hilbert_space.hpp  imperative_operator.hpp  space_partition.hpp  state.hpp  state_view.hpp
c++/triqs/operators/: many_body_operator.cpp  many_body_operator.hpp
c++/triqs/utility/: optional_compat.hpp
doc/: dyn_trimer.py
doc/notes/: example.py  notes.tex
packaging/: CMakeLists.txt
packaging/conda/: build.sh  recipe.yaml
python/: CMakeLists.txt  __init__.py  _gf_retime.py  compute_2t_obs_converters.hxx  compute_2t_obs_parameters.rst  compute_gf_converters.hxx  compute_gf_parameters.rst  converters.hxx  coperators_desc.py  ctexpr_desc.py  gf_retime_desc.py  init_state_converters.hxx  init_state_desc.py  init_state_parameters.rst  meshes_desc.py  operators_desc.py  parameters.rst  realevol.py  realevol_core_desc.py  realevol_desc.py  solver_desc.py  texpr_desc.py  tinterp_desc.py  version.py.in
python/realevol/: CMakeLists.txt  __init__.py  gf_retime_desc.py  init_state_desc.py  operators_texpr_desc.py  operators_tinterp_desc.py  realevol_desc.py  texpr_desc.py  tinterp_desc.py  version.py.in
scripts/: build_realevol_and_deps.sh
share/: CMakeLists.txt  realevol.modulefile.in  update-copyright-years.sh
share/cmake/: CMakeLists.txt
test/: CMakeLists.txt
test/c++/: CMakeLists.txt  fifo_mesh_container.cpp  fifo_mesh_container.output  hilbert.cpp  hilbert.output  hilbert_space.cpp  hs_structure.cpp  init_state.cpp  init_state_equilibrium.cpp  init_state_equilibrium.ref.h5  init_state_pure.cpp  interpolator.cpp  lanczos.cpp  lanczos.output  lanczos_worker.cpp  lpt_scheduler.cpp  many_body_operator.cpp  mesh_container.cpp  mesh_container_cyclic.cpp  mesh_container_cyclic.output  mpi_dispatcher.cpp  operator.cpp  operator.output  runge_kutta.cpp  runge_kutta.output  sort2.cpp  space_partition.cpp  time_expr.body.hpp  time_expr.cpp  time_interp.cpp  trimer.cpp  trimer.hpp  trimer.output.h5  trimer_lanczos.cpp  trimer_rk.cpp  uniform_mesh.cpp  worldlines.cpp
test/python/: CMakeLists.txt  ctexpr.py  dimer_static.py  gf_retime.py  meshes.output  meshes.py  operator_python.output  operator_python.py  operators.output  operators.py  operators_texpr.py  operators_tinterp.py  py_coperator.output  py_coperator.py  py_ctexpr.output  py_ctexpr.py  py_meshes.output  py_meshes.py  py_operator.output  star.py  star.ref.h5  star_texpr.py  star_tinterp.py  texpr.output  texpr.py  tinterp.py
